@@ -2,6 +2,10 @@
   max-width: 1024px;
 }
 
+#htmlButton {
+  -moz-binding: url("chrome://foxreplace/content/bindings.xml#htmlButton");
+}
+
 #urlsListBox .exclusionUrl {
   color: red;
 }
